--- a/views/includes/topCover.pug
+++ b/views/includes/topCover.pug
@@ -2,6 +2,5 @@
   .container
     .row
       .col-md-12
-        h1#appTitle SQuAD
-          b 2.0
-        h2#appSubtitle The Stanford Question Answering Dataset
+        h1#appTitle Data-Centric Competition
+        h2#appSubtitle The Data-Centric Competition
