--- a/views/index.pug
+++ b/views/index.pug
@@ -112,4 +112,4 @@ block content
             .infoBody
               .infoHeadline
                 h2 Leaderboard
-              +model_display(test1, true)
+              +model_display(test, true)
