--- a/views/index.pug
+++ b/views/index.pug
@@ -59,7 +59,7 @@ block content
                 ul.list-unstyled
                   li
                     a.btn.actionBtn.inverseBtn(href="http://cs231n.stanford.edu/tiny-imagenet-200.zip", download)
-                      | Data Set
+                      | Dataset
               p To evaluate your models, we have also made available the evaluation script we will use for official evaluation, along with a sample prediction file that the script will take as input. To run the evaluation, use 
                 code
                   | python evaluate.py &lt;path_to_dev&gt; &lt;path_to_predictions&gt;
@@ -70,11 +70,10 @@ block content
                       | Evaluation Script
                   li
                     a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x8731effab84f41b7b874a070e40f61e2/", download)
-                      | Sample Prediction File
+                      | Sample Dataset File
               p Once you have a built a model that works to your expectations on the dev set, you submit it to get official scores on the dev and a hidden test set. To preserve the integrity of test results, we do not release the test set to the public. Instead, we require you to submit your model so that we can run it on the test set for you. Here's a tutorial walking you through official evaluation of your model:
               a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x8212d84ca41c4150b555a075b19ccc05/")
                 | Submission Tutorial
-              p TODO add submission tutorial
               .infoHeadline
                 h2 Have Questions?
               p 
