cleaned up main page

--- a/views/index.pug
+++ b/views/index.pug
@@ -48,19 +48,20 @@ block content
                 h2 What is Data-Centric ML?
               p 
                 span
-                | Data-centric ML competition
+                | Here at Landing AI we heavily utilize data-centric approaches to improve the performance of our machine learning models. These include techniques such as fixing incorrect labels or ambiguous labels, adding data for side cases tuning , adding data augmentation techniques, etc. We have seen this data centric approach used widely across AI problems in industry yet scarcely examined in academics, so we created this competition to compare and improve data-centric approaches to improving machine learning model performance.
               hr
               p
+              .infoHeadline
                 h2 Getting Started
               p
-                | We've built a few resources to help you get started with the dataset.
+                | Here's a few resources to help you get started with the data-centric competition
               p 
                 | Download a copy of the dataset 
                 ul.list-unstyled
                   li
                     a.btn.actionBtn.inverseBtn(href="http://cs231n.stanford.edu/tiny-imagenet-200.zip", download)
                       | Dataset
-              p To evaluate your models, we have also made available the evaluation script we will use for official evaluation, along with a sample prediction file that the script will take as input. To run the evaluation, use 
+              p To evaluate your dataset, we have also made available the evaluation script we will use for official evaluation, along with a sample prediction file that the script will take as input. To run the evaluation, use 
                 code
                   | python evaluate.py &lt;path_to_dev&gt; &lt;path_to_predictions&gt;
                 |.
@@ -71,7 +72,7 @@ block content
                   li
                     a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x8731effab84f41b7b874a070e40f61e2/", download)
                       | Sample Dataset File
-              p Once you have a built a model that works to your expectations on the dev set, you submit it to get official scores on the dev and a hidden test set. To preserve the integrity of test results, we do not release the test set to the public. Instead, we require you to submit your model so that we can run it on the test set for you. Here's a tutorial walking you through official evaluation of your model:
+              p Once you built a dataset that you like, you can submit it to get official scores on dev adn hidden test set.
               a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x8212d84ca41c4150b555a075b19ccc05/")
                 | Submission Tutorial
               .infoHeadline
