--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ mixin model_display(group, is_test)
         th Rank
       th Model
       th Accuracy
-    - var largest_f1 = Math.max.apply(null, group.map(function (model) { return model.f1; }))
+    - var largest_acc = Math.max.apply(null, group.map(function (model) { return model.acc; }))
     each model in group
       tr
         if is_test
@@ -32,10 +32,10 @@ mixin model_display(group, is_test)
           if model.link
             a.link(href=model.link) #{model.link}
         td
-          if model.f1 == largest_f1
-            b #{model.f1.toPrecision(5)}
+          if model.acc == largest_acc
+            b #{model.acc.toPrecision(5)}
           else
-            | #{model.f1.toPrecision(5)}
+            | #{model.acc.toPrecision(5)}
 
 block content
   .cover#contentCover
