--- a/views/index.pug
+++ b/views/index.pug
@@ -66,13 +66,13 @@ block content
                 |.
                 ul.list-unstyled
                   li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/rest/bundles/0x6b567e1cf2e041ec80d7098f031c5c9e/contents/blob/", download)
+                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x1bd0f992d81248e2a7e94f6f84ccedc5/contents/blob/", download)
                       | Evaluation Script
                   li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x8731effab84f41b7b874a070e40f61e2/", download)
-                      | Sample Dataset File
+                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x6bdf9e3299904351ad6eecc9c7f9567d", download)
+                      | Prediction Script 
               p Once you built a dataset that you like, you can submit it to get official scores on dev adn hidden test set.
-              a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x8212d84ca41c4150b555a075b19ccc05/")
+              a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x7a8721f11e61436e93ac8f76da83f0e6/")
                 | Submission Tutorial
               .infoHeadline
                 h2 Have Questions?
