--- a/views/index.pug
+++ b/views/index.pug
@@ -60,18 +60,12 @@ block content
                   li
                     a.btn.actionBtn.inverseBtn(href="http://cs231n.stanford.edu/tiny-imagenet-200.zip", download)
                       | Dataset
-              p To evaluate your dataset, we have also made available the evaluation script we will use for official evaluation, along with a sample prediction file that the script will take as input. To run the evaluation, use 
-                code
-                  | python evaluate.py &lt;path_to_dev&gt; &lt;path_to_predictions&gt;
-                |.
+              p To evaluate your dataset we have also made available the prediction/evaluation script we will use for official evaluation
                 ul.list-unstyled
                   li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x1bd0f992d81248e2a7e94f6f84ccedc5/contents/blob/", download)
-                      | Evaluation Script
-                  li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x6bdf9e3299904351ad6eecc9c7f9567d", download)
+                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x6bdf9e3299904351ad6eecc9c7f9567d/contents/blob/", download)
                       | Prediction Script 
-              p Once you built a dataset that you like, you can submit it to get official scores on dev adn hidden test set.
+              p Once you built a dataset that you like, you can submit it to get official scores on dev and hidden test set.
               a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x7a8721f11e61436e93ac8f76da83f0e6/")
                 | Submission Tutorial
               .infoHeadline
