--- a/views/index.pug
+++ b/views/index.pug
@@ -58,7 +58,7 @@ block content
                 | Download a copy of the dataset 
                 ul.list-unstyled
                   li
-                    a.btn.actionBtn.inverseBtn(href="http://cs231n.stanford.edu/tiny-imagenet-200.zip", download)
+                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x673a2d87f692439a9ab6b4603e9fcc35", download)
                       | Dataset
               p To evaluate your dataset we have also made available the prediction/evaluation script we will use for official evaluation
                 ul.list-unstyled
