added label dataset

--- a/views/index.pug
+++ b/views/index.pug
@@ -55,11 +55,15 @@ block content
               p
                 | Here's a few resources to help you get started with the data-centric competition
               p 
-                | Download a copy of the dataset 
+                | Download a copy of the dataset and labels
                 ul.list-unstyled
                   li
                     a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x673a2d87f692439a9ab6b4603e9fcc35", download)
                       | Dataset
+                  li
+                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0xdd93233952fc4997a07638776e1cd072", download)
+                      | Labels
+                    
               p To evaluate your dataset we have also made available the prediction/evaluation script we will use for official evaluation
                 ul.list-unstyled
                   li
