--- a/views/index.pug
+++ b/views/index.pug
@@ -48,32 +48,16 @@ block content
                 h2 What is Data-Centric ML?
               p 
                 span
-                | The Data-centric AI Competition aims to elevate data-centric approaches to improving machine learning model performance. In most machine learning competitions, a user is given a fixed set of data and asked to improve on the model to produce quality predictions. However in industry, the time machine learning practitioners spend improving data vastly outweighs the time spent improving models. The Data-centric AI Competition inverts this format and instead asks the user to improve on the data given a fixed model. We will provide you with a dataset to which you can apply data-centric techniques such as fixing incorrect labels, adding data for side case tuning, apply data augmentation techniques, etc. You will then submit your altered dataset for evaluation. The prize? Fame, glory, and publicization of results. Good luck!
+                | The Data-centric AI Competition aims to elevate data-centric approaches to improving machine learning model performance. In most machine learning competitions, a user is given a fixed set of data and asked to improve on the model to produce quality predictions. However in industry, the time machine learning practitioners spend improving data vastly outweighs the time spent improving models. The Data-centric AI Competition inverts the traditional format and instead asks the user to improve on the data given a fixed model. We will provide you with a dataset to which you can apply data-centric techniques such as fixing incorrect labels, adding data for side case tuning, apply data augmentation techniques, etc. You will then submit your altered dataset for evaluation. Participants have until September 4th, 2021 to submit. The top 3 winners will be invited to a private roundtable event with Andrew Ng to share ideas and explore how to grow the data-centric movement, and will have their work highlighted on The Batch and other DeepLearning.AI and Landing AI channels. Good luck!
               p
               .infoHeadline
-                h2 Getting Started
-              p
-                | Here's a few resources to help you get started with the data-centric competition
-              p 
-                | Watch this introduction video to get an overview of the competition and submission instructions
-                ul.list-unstyled
-                  li
-                    a.btn.actionBtn.inverseBtn(href="https://drive.google.com/file/d/1qSTnHbPvqb7nyIumCMi_Ty9DPsgRXIv4/view?usp=sharing")
-                      | Introduction Video   
-              p 
-                | Download a copy of the dataset
-                ul.list-unstyled
-                  li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x53bacd968975443ca88a38b18f42eb54", download)
-                      | Dataset                   
-              p To evaluate your dataset we have also made available the training script we will use for official evaluation
-                ul.list-unstyled
-                  li
-                    a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/bundles/0x48b636fd38fc4f1095b89558a3fb57e1/", download)
-                      | Prediction Script 
-              p Once you built a dataset that you like, you can submit it to get official scores on dev and hidden test set.
+                h2 Resources
+              p Use this guide to submit on CodaLab Worksheets:
               a.btn.actionBtn.inverseBtn(href="https://worksheets.codalab.org/worksheets/0x7a8721f11e61436e93ac8f76da83f0e6/")
                 | Submission Tutorial
+              p Check out Andrew Ng's talk on shifting from a Model-centric approach to a Data-centric approach to AI: 
+              a.btn.actionBtn.inverseBtn(href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI")
+                | MLOps: From Model-centric to Data-centric AI
               .infoHeadline
                 h2 Have Questions?
               p Join us on Discourse to ask us questions and connect with other competitors!
